<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.fragment.PassNameAndSurnameFragment"
    android:background="#F5F5F6">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/authID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/semibold"
            android:text="@string/regist"
            android:textSize="50px" />


        <ImageButton
            android:id="@+id/come_back_buttonID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/come_back_img"
            android:background="@color/white"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"

        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarID">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberPhoneTextID"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/inter_low"
                android:text="@string/number_phone"
                android:textColor="@color/text_in_name_and_surname"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/numberPhoneID"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/numberPhoneTextID"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/inter_low"
                android:gravity="center"
                android:textColor="@color/text_in_name_and_surname"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="right|center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="17dp"
                android:src="@drawable/subtract" />
        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_shape"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/TextInputField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/surname"
                android:orientation="horizontal"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:layout_marginTop="7dp"
                app:helperTextEnabled="true"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:inputType="none"
                    android:backgroundTint="@android:color/transparent" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/neceserlyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/neceserly"
                android:layout_marginRight="12dp"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F5F6"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/namee"
                android:orientation="horizontal"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:layout_marginTop="7dp"
                app:helperTextEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSurnameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:backgroundTint="@android:color/transparent" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/neceserlySurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/neceserly"
                android:layout_marginRight="12dp"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F5F6"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/lastname"
                android:orientation="horizontal"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:layout_marginTop="7dp"
                app:helperTextEnabled="true"
                android:layout_marginBottom="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputLastnameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/neceserlyLastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="12dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/neceserly"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shapes_default"
        android:fontFamily="@font/sfpro"
        android:text="@string/do_regist"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintEnd_toEndOf="@+id/toolBarID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>